<resources>
    <string name="app_name">Help Buddy</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password?</string>
    <string name="enter_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_correct_email">Enter a valid email address</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="user_created">Account created successfully</string>
    <string name="user_not_created">Account not created: %1Ss</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="failed_update_profile">Failed to update Profile: %1Ss</string>
    <string name="storage_permission">Storage access permission required</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="change_profile">Change Profile Picture</string>
    <string name="remove_profile">Remove Profile Picture</string>
    <string name="profile_removed">Profile Picture Removed</string>
    <string name="Profile" />
    <string name="log_in_success">Logged In Successfully</string>
    <string name="enter_new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="password_changed">Password changed</string>
    <string name="password_not_changed">Password not changed: %1$s</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="reset_instructions">Reset password link has been sent to %1$s</string>
    <string name="try_again">Try Again</string>
    <string name="close">Close</string>
    <string name="reset_link_not_sent">Rest link not sent: %1$s</string>
    <string name="try_again_delay">Try Again in %1$s</string>
    <string name="loading">Please wait…</string>
    <string name="not_connected">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="people">People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_conversations">No chats available</string>
    <string name="no_requests">No Friend Requests Available</string>
    <string name="no_people">No People Available</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="get_people_failed">Failed to get existing users : %1$s</string>
    <string name="friend_request_sent_string">Friend request sent</string>
    <string name="friend_request_not_sent">Friend request not sent: %1$s</string>
    <string name="friend_request_cancelled">Friend Request Cancelled</string>
    <string name="friend_request_not_cancelled">Failed to cancel friend request: %1$s</string>
    <string name="accept_request">Accept</string>
    <string name="remove_request">Remove</string>
    <string name="failed_to_get_requests">Failed to load requests: %1$s</string>
    <string name="failed_to_remove_request">Failed to remove friend request: %1$s</string>
    <string name="friend_request_removed">Friend request removed</string>
    <string name="failed_to_accept">Failed to accept request: %1$s</string>
    <string name="failed_to_get_chats">Failed to load chats: %1$s</string>
    <string name="type_message">Type Message</string>
    <string name="failed_to_message">Message not sent: %1$s</string>
    <string name="message_sent">Message sent</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failed_to_send_file">Failed to send file: %1$s</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="failed_to_delete">Failed to delete message: %1$s</string>
    <string name="message_deleted">Message Deleted</string>
    <string name="failed_to_delete_file">Failed to delete file: %1$s</string>
    <string name="failed_to_download_file">Failed to download file</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="file_downloaded">File downloaded successfully</string>
    <string name="view">view</string>
    <string name="failed_to_download">Failed to download file: %1$s</string>
    <string name="share_with">Share with</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends: %1$s</string>
    <string name="failed_to_register_token">Failed to register device token</string>
    <string name="notification_not_sent">Notification not sent: %1$s</string>
    <string name="cant_log_out">Couldn\'t log out: %1$s</string>
    <string name="something_went_wrong">Something went wrong: %1$s</string>
</resources>